--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h2 class="text-blue-700">Test Git </h2>
+    <section>
+        <div class="flex flex-row">
+            <div class="item1 bg-red-500">
+                Item1
+            </div>
+            <div class="item2 bg-yellow-500">
+                Item2
+            </div>
+        </div>
+    </section>
 </body>
 </html>
