--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <section>
         <div class="flex flex-row">
             <div class="item1 bg-red-500">
-                Item3
+                Item3 updated in server
             </div>
             <div class="item2 bg-yellow-500">
                 Item2
